subiendo data y configuracion inicial

--- a/proyecto_final.Rmd
+++ b/proyecto_final.Rmd
@@ -7,11 +7,73 @@ output: html_document
 
 + Integrante 1. Rol: Administrador
 + Integrante 2. Rol: Colaborador 1
-+ Integrante 3. Rol: Colaborador 2
++ Alvarado Palacios Fernando  Rol: Colaborador 2
 
-```{r}
+
+
+```{r setup, include=FALSE}
+# Empezamos limpiando nuestro ambiente
+rm(list = ls(all.names = TRUE))
+
+
+# Configuración global de los bloques de código (chunk's)
+knitr::opts_chunk$set(
+	echo = FALSE,
+	fig.align = "center",
+	fig.dim = c(5.0, 4.0),
+	fig.pos = "H",
+# Agregamos configuraciones para evitar mensajes de advertencias y de errores en el archivo
+	message = FALSE,
+	warning = FALSE,
+	error = F
+)
+
+# Librerias a usar en este proyecto 
+library(dplyr)
+library(readr)
+library(ggplot2)
+library(countrycode)
+library(naniar)
+library(esquisse)
+library(knitr)   #Libreria para hacer tabalas mas bonitas
+library(patchwork) #Orden de las librerias
 library(DBI)
 library(dbplyr)
 library(RSQLite)
 
+
+
+# Rutas que vamos a trabajar, cada quien tendra una ruta diferente
+
+setwd("C:/Users/ferna/Documents/Proyectos_Diplomado/diplo-modulo2-equipo-11/Data")
+#setwd("C:/Users/diego/Documents/Ingeniería_Ambiental/Diplomado/Modulo_1/Proyecto_M1_P1/colaboracion-git-equipo-11/Data")
+#setwd("/Users/bryantcanseco/Desktop/UNAM/Diplomados/Ciencia de Datos- UNAM/colaboracion-git-equipo-11/Data")
+
+```
+
+
+
+```{r Data}
+
 conn <- DBI::dbConnect(RSQLite::SQLite(), "vuelos.db")
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
